[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "twyla-chat-templates"
version = "0.1.0-alpha.0"
packages = [
    { include = "twyla" },
]
description = "A collection of Twyla chat message templates"
authors = [
    "Twyla Engineering <software@twyla.ai>"
]
license = "MIT"

readme = "README.md"

repository = "https://github.com/twyla-ai/twyla-chat-templates"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = { version = "^0.6", python = "~3.6" }

[tool.poetry.dev-dependencies]
pre-commit = "^1.11"
flake8 = "^3.5"
coverage = "^4.5"
black = "^19.3b0"
tox = "^3.5"
pytest = "^4.1"
pytest-cov = "^2.7"
